apps/bazarr/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi5-large
                      - rpi4-large
              weight: 80
      containers:
        - name: bazarr
          volumeMounts:
            - name: movies-data
              mountPath: /data/movies
            - name: shows-data
              mountPath: /data/shows
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
        - name: movies-data
          persistentVolumeClaim:
            claimName: movies-data
        - name: shows-data
          persistentVolumeClaim:
            claimName: shows-data
